# weather-service-agent

./: .gitignore  README.md  pyproject.toml
docs/: design_decisions.md  planning.md  tools.md
src/weather_service_agent/core/: exceptions.py
src/weather_service_agent/data/: weather_data.py
src/weather_service_agent/models/: city_weather_record.py  temperature.py  trace.py  weather_advice.py  weather_conditions.py
src/weather_service_agent/tools/: temperature.py  weather_advice.py  weather_conditions.py
tests/: test_temperature.py
