[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-service-agent"
version = "0.1.0"
description = "Weather service agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.2.17",
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["weather_service_agent*"]
