[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-service-agent"
version = "0.1.0"
description = "Weather service agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["weather_service_agent*"]
